<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xkcdaily</string>
    <string name="mouseover_button">Mouseover</string>
    <string name="content_desc">xkcd comic</string>
    <string name="date_field_placeholder">date</string>
    <string name="text_number_placeholder">number</string>
    <string name="label_picture_button">Picture</string>
    <string name="text_mouseover_placeholder">mouseover</string>
    <string name="close">Close</string>
    <string name="title_activity_show">xkcdaily</string>
    <string name="title_activity_dialog_offline">No connection</string>
    <string name="title_activity_no_connection">No connection</string>
    <string name="text_offline">You appear to be offline, and there is no saved image to display. Once you have an internet connection, please click \'Update\' or re-add the widget.</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="share_image_label">Share comic</string>
    <string name="label_share_link">Share link</string>
    <string name="text_last_update_failed">The last update failed, most likely because there was no internet connection. Would you like to update now or just see the comic you clicked on?</string>
    <string name="title_update">Update</string>
    <string name="title_old_comic">Old comic</string>
    <string name="title_last_update_failed">Last update failed</string>

</resources>